# prompt-tts

./: .gitignore  README.md  diffusers_t2s2.py  evaluate.py  inference.py  inference_multi.py  inference_single.py  lj.csv  pyproject.toml  train.py  train_multi.py  train_multi_2d.py  train_single.py
data_preparation/: cut_by_vad.py  data_processor.py  extract_transcript.py  generate_code.py
data_preparation/asr/: generate_transcript.py
tts/: dataloader.py  decode_codec.py  get_cmu.py  models.py  pipeline example.ipynb  pipeline.py  pipeline_Unet1D.py  train.py  utils.py
tts/dataloader/: dataloader.py  multi.py  single.py
tts/ldm/: resnet.py  transformer_1d.py  unet_1d_condition.py  unet_blocks.py
tts/model/: models.py  modules.py
tts/process_text/: __init__.py  cmu_dictionary  symbols.py
